tests/baselines/reference/classExpressionWithDecorator1.errors.txt
tests/cases/compiler/classExpressionWithDecorator1.ts(1,9): error TS1109: Expression expected.
tests/cases/compiler/classExpressionWithDecorator1.ts(1,10): error TS2552: Cannot find name 'decorate'. Did you mean 'decodeURI'?


==== tests/cases/compiler/classExpressionWithDecorator1.ts (2 errors) ====
    var v = @decorate class C { static p = 1 };
            ~
!!! error TS1109: Expression expected.
             ~~~~~~~~
!!! error TS2552: Cannot find name 'decorate'. Did you mean 'decodeURI'?